--- a/index.html
+++ b/index.html
@@ -221,82 +221,22 @@ footer{text-align:center;font-size:8px;opacity:0.7}
   align-items:center;
 }
 
-.judge{
-  position:relative;
-  width:48px;
-  height:64px;
+#judge-head{
+  display:inline-block;
+  font-size:0;
+  line-height:0;
   image-rendering: pixelated;
 }
 
-/* HEAD */
-.judge .head{
-  position:absolute;
-  top:0;
-  left:8px;
-  width:32px;
-  height:16px;
-  background:#0f3; /* dark green base */
-  box-shadow:
-    inset -2px -2px #0a2, /* darker shading */
-    inset 2px 2px #3f3;   /* lighter shading */
-  border:1px solid #0a2;
+.row{
+  display:flex;
 }
 
-/* EYES */
-.judge .head .eye{
-  position:absolute;
-  top:4px;
-  width:4px;
-  height:4px;
-  background:#030; /* darkest green for eyes */
-}
-.judge .head .eye.left{ left:6px; }
-.judge .head .eye.right{ right:6px; }
-
-/* NOSE */
-.judge .head .nose{
-  position:absolute;
-  top:8px;
-  left:14px;
-  width:4px;
-  height:2px;
-  background:#060;
+.pixel{
+  width:10px;  /* adjust pixel size */
+  height:10px;
 }
 
-/* MOUTH */
-.judge .head .mouth{
-  position:absolute;
-  bottom:2px;
-  left:10px;
-  width:12px;
-  height:2px;
-  background:#060;
-}
-
-/* BODY / ROBE */
-.judge .body{
-  position:absolute;
-  top:16px;
-  left:6px;
-  width:36px;
-  height:36px;
-  background:#093; /* robe main color */
-  box-shadow:
-    inset -3px -3px #030,
-    inset 2px 2px #0f3;
-}
-
-/* GAVEL */
-.judge .gavel{
-  position:absolute;
-  bottom:0;
-  right:-8px;
-  width:14px;
-  height:6px;
-  background:#0a3;
-  box-shadow:
-    0 6px #060;
-}
 
 /* ===============================
    ANIMATIONS (reuse existing)
@@ -345,15 +285,81 @@ footer{text-align:center;font-size:8px;opacity:0.7}
   </div>
 
 <div id="judge" class="judge idle">
-  <div class="head">
-    <div class="eye left"></div>
-    <div class="eye right"></div>
-    <div class="mouth"></div>
-    <div class="nose"></div>
+  <div id="judge-head">
+    <!-- Row 1 -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.1)"></div>
+    </div>
+    <!-- Row 2: wig top -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.4)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.4)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.4)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+    </div>
+    <!-- Row 3: wig sides -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.3)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.5)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.5)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.5)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.3)"></div>
+    </div>
+    <!-- Row 4: eyes -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,30,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.5)"></div>
+      <div class="pixel" style="background: rgba(0,30,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+    </div>
+    <!-- Row 5: nose -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,150,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.5)"></div>
+      <div class="pixel" style="background: rgba(0,150,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+    </div>
+    <!-- Row 6: mouth -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.1)"></div>
+      <div class="pixel" style="background: rgba(0,80,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,150,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,80,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.1)"></div>
+    </div>
+    <!-- Row 7-8: robe collar -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.1)"></div>
+      <div class="pixel" style="background: rgba(0,200,0,0.8)"></div>
+      <div class="pixel" style="background: rgba(0,200,0,0.8)"></div>
+      <div class="pixel" style="background: rgba(0,200,0,0.8)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.1)"></div>
+    </div>
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+      <div class="pixel" style="background: rgba(0,180,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,180,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,180,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,255,136,0.2)"></div>
+    </div>
+    <!-- Row 9: gavel -->
+    <div class="row">
+      <div class="pixel" style="background: rgba(0,100,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,150,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,150,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,150,0,1)"></div>
+      <div class="pixel" style="background: rgba(0,100,0,1)"></div>
+    </div>
   </div>
-  <div class="body"></div>
-  <div class="gavel"></div>
 </div>
+
 
 </header>
 
