--- a/index.html
+++ b/index.html
@@ -447,6 +447,31 @@ const ACTIONS = ["running away", "holding a knife", "yelling", "entering the roo
 const ADJECTIVES = ["angry", "nervous", "intoxicated", "sleepy", "distracted"];
 const EVENTS = ["a fight", "a theft", "an argument", "a car crash", "a mysterious noise"];
 const EMOTIONS = ["scared", "happy", "confused", "angry"];
+const WITNESS_MOODS = ["nervous","angry","sarcastic","calm","confused"];
+
+const FILLERS = [
+  "Uh… ",
+  "I mean… ",
+  "Well… ",
+  "I'm not sure but… ",
+  "That's hard to say… ",
+  ""
+];
+
+const LAWYER_LABELS = [
+  "LAWYER ASKS:",
+  "LAWYER PRESSES:",
+  "DEFENSE COUNSEL ASKS:",
+  "DEFENSE PRESSES:"
+];
+
+const WITNESS_LABELS = [
+  "WITNESS ANSWERS:",
+  "WITNESS HESITATES:",
+  "WITNESS SNAPS:",
+  "WITNESS MUTTERS:"
+];
+
 const VERBS = ["signed", "ignored", "took", "destroyed", "altered"];
 
 // ================================
@@ -468,47 +493,54 @@ const CASE_TOPICS = [
 
 
 const QUESTION_TEMPLATES = [
-  {
-    q: "Would you agree that the defendant appeared %ADJ% when you noticed them?",
-    a: "Yes, that seems accurate.",
-    type: "Leading"
-  },
-  {
-    q: "What conclusion did you draw from what you observed?",
-    a: "I assumed they were %EMOTION%.",
-    type: "Speculation"
-  },
-  {
-    q: "You were informed that the defendant was %ACTION%, correct?",
-    a: "Yes, that is what I was told.",
-    type: "Hearsay"
-  },
-  {
-    q: "Can you describe the sequence of events?",
-    a: "It happened because they felt %EMOTION%.",
-    type: "Speculation"
-  },
-  {
-    q: "Isn't it true that your memory of the incident is unclear?",
-    a: "Yes, parts of it are unclear.",
-    type: "Leading"
-  },
-  {
-    q: "What did you personally witness?",
-    a: "I observed the defendant near the scene.",
-    type: null
-  },
-  {
-    q: "Where were you positioned at the time of the incident?",
-    a: "I was standing across the street.",
-    type: null
-  },
-  {
-    q: "You discussed this with another person before testifying today?",
-    a: "Yes, we talked about it afterward.",
-    type: "Hearsay"
-  }
+
+/* === NO OBJECTION (NORMAL QUESTIONS) === */
+{q:"What did you personally observe?",a:"I saw the defendant %ACTION%.",type:null},
+{q:"Where were you standing at the time?",a:"Near the %LOCATION%.",type:null},
+{q:"What happened next?",a:"The defendant %ACTION%.",type:null},
+{q:"Did anything stand out to you?",a:"There was shouting.",type:null},
+{q:"How long did this last?",a:"A few minutes.",type:null},
+{q:"Did you recognize anyone?",a:"Yes, the defendant.",type:null},
+{q:"What was your reaction?",a:"I felt %EMOTION%.",type:null},
+
+/* === LEADING (SUBTLE) === */
+{q:"You noticed the defendant acting unusual, correct?",a:"Yes.",type:"Leading"},
+{q:"It appeared chaotic to you?",a:"Yes.",type:"Leading"},
+{q:"You would agree the situation was tense?",a:"I suppose so.",type:"Leading"},
+{q:"You saw the defendant leave right after, didn’t you?",a:"Yes.",type:"Leading"},
+{q:"You didn’t feel safe there, correct?",a:"No.",type:"Leading"},
+
+/* === SPECULATION (SUBTLE) === */
+{q:"Why do you think the defendant left?",a:"Probably fear.",type:"Speculation"},
+{q:"What do you believe caused this behavior?",a:"Panic.",type:"Speculation"},
+{q:"What were they feeling at that moment?",a:"%EMOTION%.",type:"Speculation"},
+{q:"What do you assume happened before that?",a:"I’m not sure.",type:"Speculation"},
+
+/* === HEARSAY === */
+{q:"How did you learn about this?",a:"Someone told me later.",type:"Hearsay"},
+{q:"Is that based on what others said?",a:"Yes.",type:"Hearsay"},
+{q:"Did you witness that yourself?",a:"No.",type:"Hearsay"},
+{q:"Who informed you of that?",a:"A friend.",type:"Hearsay"},
+
+/* === COMPOUND (NOT OBVIOUS) === */
+{q:"Did you see the defendant and hear shouting?",a:"Yes.",type:"Compound"},
+{q:"Were you frightened and confused at the same time?",a:"Yes.",type:"Compound"},
+{q:"Did you notice the defendant and the victim arguing?",a:"Yes.",type:"Compound"},
+{q:"Did you run and call for help?",a:"Yes.",type:"Compound"},
+
+/* === FOUNDATION === */
+{q:"Where did that information come from?",a:"I don’t remember.",type:"Foundation"},
+{q:"Who gave you that detail?",a:"Someone else.",type:"Foundation"},
+{q:"How do you know this?",a:"I was told.",type:"Foundation"},
+
+/* === ARGUMENTATIVE === */
+{q:"Do you expect the court to believe that?",a:"Yes.",type:"Argumentative"},
+{q:"Is that really reliable?",a:"I think so.",type:"Argumentative"},
+{q:"Are you certain you’re not mistaken?",a:"I’m sure.",type:"Argumentative"}
+
 ];
+
+
 
 
 let currentCase = [];
@@ -616,17 +648,25 @@ function generateCase() {
       .replace("%EMOTION%", emotion)
       .replace("%ADJ%", adj);
 
-    const a = t.a
-      .replace("%ACTION%", action)
-      .replace("%EVENT%", event)
-      .replace("%EMOTION%", emotion)
-      .replace("%ADJ%", adj);
+const filler = rand(FILLERS);
+const mood = rand(WITNESS_MOODS);
 
-    currentCase.push({
-      question: q,
-      answer: a,
-      objection: t.type
-    });
+const filler = rand(FILLERS);
+const mood = rand(WITNESS_MOODS);
+
+const a = filler + t.a
+  .replace("%ACTION%", action)
+  .replace("%EVENT%", event)
+  .replace("%EMOTION%", emotion)
+  .replace("%ADJ%", adj);
+
+currentCase.push({
+  question: q,
+  answer: a,
+  objection: t.type,
+  mood: mood
+});
+
   }
 }
 
@@ -842,11 +882,46 @@ function nextCase() {
 </div>
 
     <div class='label'>QUESTION ${questionIndex+1} / 20</div><br><br>
-    <div class='label'>LAWYER ASKS:</div><br>
-    “${current.question}”<br><br>
-    <div class='label'>WITNESS ANSWERS:</div><br>
-    “${current.answer}”
-  `;
+   const lawyerLabel = rand(LAWYER_LABELS);
+const witnessLabel = rand(WITNESS_LABELS);
+
+court.innerHTML = `
+<div class="courtroom">
+  <div class="sprite">
+    ⚖ JUDGE<br>
+    Status: Observing<br>
+    Mood: Neutral
+  </div>
+
+  <div class="sprite">
+    👥 JURY<br>
+    Attention: High<br>
+    Bias: Unknown
+  </div>
+
+  <div class="sprite">
+    💼 PROSECUTOR<br>
+    Tactic: Pressing<br>
+    Strategy: Aggressive
+  </div>
+
+  <div class="sprite">
+    🧍 WITNESS<br>
+    Trait: ${witness.trait}<br>
+    Reliability: Questionable
+  </div>
+</div>
+
+<div class='label'>QUESTION ${questionIndex+1} / 20</div><br><br>
+
+<div class='label'>${lawyerLabel}</div><br>
+“${current.question}”<br><br>
+
+<div class='label'>${witnessLabel}</div><br>
+“${current.answer}”
+`;
+
+  
 
   actions.innerHTML='';
 
